change to LinkedList